api-gw/nginx/cmbc/f5-manage03/3.2.6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-3-2-6
  namespace: f5-manage03
  annotations:
     nginx.com/health-checks: "true"
     nginx.com/health-checks-mandatory: "true"
     nginx.com/health-checks-mandatory-queue: "500"
     nginx.com/slow-start: "30s"
     nginx.org/lb-method: "least_conn"
spec:
  ingressClassName: nginx
  rules:
  - host: enhance.f5manage03.test.cmbc.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
